# QStone

./: .coveragerc  .gitignore  ASSUMPTIONS.md  CHANGELOG.md  CONFIG_JSON.md  CONTRIBUTING.md  README.md  SLURM.md  pylintrc  pyproject.toml  tox.ini
.github/: CODEOWNERS
.github/workflows/: docs.yaml  publish.yaml  quality.yaml  security.yaml
docs/source/: advanced.rst  assumptions.rst  basics.rst  changelog.rst  conf.py  index.rst  slurm.rst
examples/adding/computation/: README.md  example_computation.py
examples/node/: README.md  _dcl_qpu.py  _mock_qpu.py  _qpu.py  remote_qpu.py
examples/node/tests/: test_mock_qpu.py  test_remote_qpu.py
examples/running/: QS_Profile.h5  getting_started.ipynb
qstone/: __main__.py
qstone/apps/: PyMatching.py  QBC.py  QuantumVolume.py  RB.py  VQE.py  __init__.py  computation.py  cuda_quantum_simulator.py  qutip_quantum_simulator.py
qstone/circuits/: syndrome_extraction.qasm
qstone/connectors/: connection.py  connector.py
qstone/connectors/backends/rigetti/: runner.py
qstone/connectors/grpc/: README.md  qpu.proto  qpu_pb2.py  qpu_pb2_grpc.py  runner.py
qstone/connectors/http/: runner.py
qstone/connectors/no_link/: no_link.py
qstone/generators/: generator.py
qstone/generators/bare_metal/: type_exec_{app}.sh.jinja
qstone/generators/common/: jobs.py.jinja  qstone.sh.jinja  type_exec.py.jinja
qstone/generators/lsf/jsrun/: type_exec_{app}.bsub.jinja
qstone/generators/slurm/schedmd/: gres.conf  type_exec_{app}.sbatch.jinja
qstone/multiprocessing/: __init__.py  mpi.py  nompi.py
qstone/profiling/: profile.py
qstone/simulators/: cuda_qsim.py  qutip_qsim.py  qutip_quantum_simulator.py  simulation.py  test.py
qstone/utils/: config_schema.py  utils.py
tests/: test_apps.py  test_connectors.py  test_generator.py  test_main.py  test_profiling.py  test_simulators.py
tests/data/apps/: RB_run_test.npz  custom1.py  qbc_run_test.npz
tests/data/generator/: config_multi.json  config_single.json  config_single_custom_app.json  config_single_logging.json  config_single_scheduler.json  config_wrong_sum.json
tests/data/profiler/: run1.json
tests/data/profiler/run1/: 1.json  2.json
tests/mocks/grpc/: server.py
tests/mocks/lsf_jsrun/: scheduler.py
tests/mocks/slurm/: jobs.py
